--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <title>PILLAGERS</title>
+  <title>DAYC</title>
 </head>
 
 <body>
